# wjlee-ling.github.io

./: .gitignore  README.md  _config.yml  pyproject.toml  robots.txt
_data/: navigation.yml
_includes/: head.html
_notebooks/: 2022-09-26-dimensions.ipynb  2022-09-26-dimensions.md  2022-09-27-pytorch-hooks.ipynb  2022-09-29-torch-gather.ipynb  2022-09-29-torch-gather.md  2022-10-17-RNN-Output-Hidden.ipynb  2022-10-17-RNN-Output-Hidden.md  2022-11-21-Normalization-Regularization.ipynb  2022-11-21-Normalization-Regularization.md  2022_05_17_cs224n_exploring_word_vectors.ipynb  2022_05_17_cs224n_exploring_word_vectors.md  2022_06_02_cs224n_a2_word2vec.ipynb  2022_06_02_cs224n_a2_word2vec.txt  2022_06_22_kor_word2vec_implementation.md  2022_07_07_byte_pair_encoding.ipynb  2022_09_21_pandas_map_apply.ipynb
_pages/: nlp_log.md  projects.html  projects.md
_posts/: 2022-05-05-tone-and-fact-1.md  2022-07-07-subword-algorithms.md  2022-09-21-pandas-map-apply.md  2022-09-26-dimensions.md  2022-09-27-pytorch-hooks.md  2022-09-29-torch-gather.md  2022-10-17-RNN-Output-Hidden.md  2022-11-21-Normalization-Regularization.md  2022_06_02_cs224n_a2_word2vec.md  2022_07_07_byte_pair_encoding.md  2022_09_21_pandas_map_apply.md  2023-02-13-armybot-1.md  2023-02-25-algorithms-array.md  2023-03-02-algorithms-hashing.md  2023-03-18-bias-variance-tradeoff.md  2023-03-22-weight-initialization.md  _2023-03-02-algorithms-hashing.md  post_template.md
_sass/minimal-mistakes/: _reset.scss
docs/_posts/: 2022-05-05-tone-and-fact-1.md
