[tool.poetry]
name = "nlp-log"
version = "0.1.0"
description = ""
authors = ["wjlee-ling <wjlee.ling@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_log"}]

[tool.poetry.dependencies]
python = "3.8.16"
nbconvert = "^7.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
